# bmstulabs-iu7-sem4-oop

./: CMakeLists.txt  LICENSE  README.md
01 - Cube/: CMakeLists.txt
01 - Cube/data/: cube  cylinder
01 - Cube/inc/: error.h  object.h  render.h  ui.h  util.h  utils.h
01 - Cube/src/: error.cpp  main.cpp  object.cpp  render.cpp  ui.cpp  util.cpp  utils.cpp
01 - Cube/ui/: about.ui  main.ui
